--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -161,8 +161,8 @@
         <div class="about-text">
           <h2>About <span>Me</span></h2>
           <p>
-           Dynamic and results-driven Data & Performance Analytics and Reporting Specialist with 5 years of experience transforming complex data into actionable insights.
-            Certified Microsoft Power BI Data Analyst (PL-300),
+           Dynamic and results-driven Data & Performance Analytics and Reporting Specialist with 5 years of experience 
+           transforming complex data into actionable insights.Certified Microsoft Power BI Data Analyst (PL-300),
              with strong proficiency in Excel, Power BI, Google Data Studio, Python, SQL, R (Statistical Programming), and Microsoft Azure.
               Experienced in designing interactive dashboards and reports that support strategic decision-making, delivering high-quality analytical solutions that improve efficiency and enable real-time data accessibility.
                Adaptable and committed to continuous learning, thriving in fast-paced environments while leveraging data to drive meaningful business impact.
@@ -319,15 +319,15 @@
                   border-radius: 10px;
                   object-fit: contain;
                   display: block;
-                " src="./img/12.png"
+                " src="./img/231.jpg"
               />
               <div class="layer">
-                <h5>Energy Data Analysis with Excel</h5>
+                <h5>Commercial Insights: Manufacturer & Segment Performance</h5>
                 <p>
-                  Conducted energy data analysis using Excel, leveraging Power
-                  Query for data transformation and Pivot Tables for insights.
-                  Created interactive dashboards to visualize trends and
-                  optimize energy usage.
+                   A Power BI dashboard designed to analyze manufacturer performance across countries and product segments.
+                   It tracks total revenue, prior-year sales, growth percentage, and market share, with interactive filters by year and segment. 
+                   The report highlights top competitors, revenue distribution by country/manufacturer group, and multi-year trends to support strategic decisions,
+                   benchmarking, and commercial performance monitoring.
                 </p>
               </div>
             </div>
@@ -343,12 +343,13 @@
                 src="./img/222.jpg"
               />
               <div class="layer">
-                <h5>Advanced Energy Analysis</h5>
+                <h5>Security Incident & IT Support Ticket Analytics</h5>
                 <p>
-                  Conducted an in-depth analysis of energy sources using Power
-                  BI and SQL. Utilized DAX functions, data modeling, and
-                  advanced visualizations of energy consumption, efficiency, and
-                  trends.
+                 An interactive dashboard that monitors and analyzes cybersecurity and IT support tickets across branches.
+                  It highlights key KPIs such as closed tickets, ticket distribution by type, incident scope, 
+                 affected device categories, actions taken (e.g., patched, blocked, quarantined),
+                  resolution hours, and incident impact level. The goal is to improve visibility, speed up 
+                  decision-making, and reduce overall time to resolve issues through trend and root-cause insights.
                 </p>
               </div>
             </div>
@@ -362,13 +363,15 @@
                   object-fit: contain;
                   display: block;
                 "
-                src="./img/333.jpg"
+                src="./img/WhatsApp Image 2025-12-09 at 02.07.26_ab44f175.jpg"
               />
               <div class="layer">
-                <h5>E-Commerce Orders Dashboard</h5>
+                <h5>Tuwaiq Academy Enrollment & Demographics Insights</h5>
                 <p>
-                  E-Commerce Orders: Analyze sales, quantity, pricing, and COGS trends by branch,
-                   product category, and country to improve profitability and decision-making.
+                   A Power BI dashboard built for a Tuwaiq Academy competition to analyze student data and provide clear, 
+                   interactive insights. It tracks key indicators such as age distribution, gender, employment status, education level,
+                   and program categories, with filters by year, home region, and city. The dashboard also includes geo-visualization (map) and trend analysis to support 
+                   data-driven decisions for program planning and performance monitoring.
                 </p>
               </div>
             </div>
