--- a/index.html
+++ b/index.html
@@ -324,10 +324,9 @@
               <div class="layer">
                 <h5>Commercial Insights: Manufacturer & Segment Performance</h5>
                 <p>
-                   A Power BI dashboard designed to analyze manufacturer performance across countries and product segments.
-                   It tracks total revenue, prior-year sales, growth percentage, and market share, with interactive filters by year and segment. 
-                   The report highlights top competitors, revenue distribution by country/manufacturer group, and multi-year trends to support strategic decisions,
-                   benchmarking, and commercial performance monitoring.
+                   A Power BI dashboard analyzing manufacturer performance by country and segment. 
+                   It tracks revenue, prior-year sales, growth, and market share, 
+                   highlighting top competitors and multi-year trends to support benchmarking and business decisions.
                 </p>
               </div>
             </div>
@@ -345,11 +344,9 @@
               <div class="layer">
                 <h5>Security Incident & IT Support Ticket Analytics</h5>
                 <p>
-                 An interactive dashboard that monitors and analyzes cybersecurity and IT support tickets across branches.
-                  It highlights key KPIs such as closed tickets, ticket distribution by type, incident scope, 
-                 affected device categories, actions taken (e.g., patched, blocked, quarantined),
-                  resolution hours, and incident impact level. The goal is to improve visibility, speed up 
-                  decision-making, and reduce overall time to resolve issues through trend and root-cause insights.
+                 An interactive dashboard tracking cybersecurity and IT tickets across branches. It summarizes
+                  key KPIs (closed tickets, incident scope, devices, actions taken, resolution time, and impact level)
+                  to improve visibility, speed decisions, and reduce time to resolve issues
                 </p>
               </div>
             </div>
@@ -368,10 +365,10 @@
               <div class="layer">
                 <h5>Tuwaiq Academy Enrollment & Demographics Insights</h5>
                 <p>
-                   A Power BI dashboard built for a Tuwaiq Academy competition to analyze student data and provide clear, 
-                   interactive insights. It tracks key indicators such as age distribution, gender, employment status, education level,
-                   and program categories, with filters by year, home region, and city. The dashboard also includes geo-visualization (map) and trend analysis to support 
-                   data-driven decisions for program planning and performance monitoring.
+                  A Power BI dashboard built for a Tuwaiq Academy competition to analyze 
+                  student demographics and program trends. It tracks 
+                  key metrics (age, gender, employment, education, program categories) with filters by year, region, and city, 
+                  plus map and trend visuals to support planning and performance monitoring.
                 </p>
               </div>
             </div>
