--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           ></a>
         </div>
         <a
-          href="https://drive.google.com/drive/folders/1eeWOJNPL3w_GGQ_9AmpuUsay_Osx3ElA?usp=sharing"
+          href="./SAEED_Resume_2 (3).pdf"
           style="--i: 11"
           class="btn-box"
           target="_blank"
