--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <br />
             <br />
             <a
-              href="https://drive.google.com/drive/folders/1eeWOJNPL3w_GGQ_9AmpuUsay_Osx3ElA?usp=sharing"
+              href="./cv.pdf"
               style="--i: 11"
               class="abtbtn-box"
               target="_blank"
