--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           ></a>
         </div>
         <a
-          href="./SAEED_Resume_2 (3).pdf"
+          href="./cv.pdf"
           style="--i: 11"
           class="btn-box"
           target="_blank"
